# ChangeLog for www-misc/htdig
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/ChangeLog,v 1.5 2005/02/10 16:36:03 ka0ttic Exp $

*htdig-3.1.6-r7 (10 Feb 2005)

  10 Feb 2005; Aaron Walker <ka0ttic@gentoo.org>
  +files/htdig-3.1.6-unescaped-output.diff, -htdig-3.1.6-r5.ebuild,
  -htdig-3.1.6-r6.ebuild, +htdig-3.1.6-r7.ebuild:
  Revision bump for sec bug 80602; stable on x86.

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  29 Aug 2004; Renat Lumpau <rl03@gentoo.org> :
  Symlink htsearch to /usr/bin, see bug #62087. Fix a typo in a dirname.

*htdig-3.1.6-r5 (26 Aug 2004)

  26 Aug 2004; Renat Lumpau <rl03@gentoo.org> +metadata.xml,
  +htdig-3.1.6-r5.ebuild:
  Added metadata.xml

*htdig-3.1.6-r5 (26 Aug 2004)

  26 Aug 2004; Renat Lumpau <rl03@gentoo.org> +htdig-3.1.6-r5.ebuild:
  Convert to webapp.eclass. Closes #34594, 52592, and helps with #7728, 35275.

*htdig-3.1.6-r4 (15 Aug 2004)

  15 Aug 2004; Stuart Herbert <stuart@gentoo.org> +files/CONFIG.in,
  +htdig-3.1.6-r4.ebuild:
  Moved from net-www/htdig to www-misc/htdig.

  23 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> htdig-3.1.6-r4.ebuild:
  header fix; mips needs deps before stable; move webapp-detect into unpack

  15 Dec 2003; Stuart Herbert <stuart@gentoo.org> htdig-3.1.6-r4.ebuild:
  Fix for bug #32636

  16 Nov 2003; Martin Holzer <mholzer@gentoo.org> htdig-3.1.6-r4.ebuild:
  added webapps-apache.eclass. Closes #33622

  16 Nov 2003; Brad House <brad_mssw@gentoo.org> htdig-3.1.6-r4.ebuild:
  mark stable on amd64

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  30 Jul 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Don't run rundig from pkg_postinst(). What this did was index the whole
  www.htdig.org site! We certainly don't want that. Closes bug #5293.

*htdig-3.1.6-r4 (27 May 2002)

  29 Mar 2003; Jan Seidel <tuxus@gentoo.org>
  htdig-3.1.6-r4.ebuild :