@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/Attic/htdig-3.1.6-r4.ebuild,v 1.1 2004/08/15 18:08:01 stuart Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/Attic/htdig-3.1.6-r4.ebuild,v 1.2 2005/02/10 17:13:48 luckyduck Exp $
 
 inherit webapp-apache
 
