@@ -1,13 +1,13 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/Attic/htdig-3.1.6-r7.ebuild,v 1.1 2005/02/10 16:36:03 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/Attic/htdig-3.1.6-r7.ebuild,v 1.2 2005/02/10 17:13:48 luckyduck Exp $
 
 inherit webapp eutils flag-o-matic
 
 DESCRIPTION="HTTP/HTML indexing and searching system"
 SRC_URI="http://www.htdig.org/files/${P}.tar.gz"
 HOMEPAGE="http://www.htdig.org"
-KEYWORDS="x86 ~sparc ~ppc ~mips ~amd64"
+KEYWORDS="x86 ~sparc ~ppc ~mips amd64"
 LICENSE="GPL-2"
 
 RDEPEND=">=sys-libs/zlib-1.1.3
