@@ -1,6 +1,9 @@
 # ChangeLog for www-misc/htdig
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/ChangeLog,v 1.5 2005/02/10 16:36:03 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-misc/htdig/ChangeLog,v 1.6 2005/02/10 17:13:48 luckyduck Exp $
+
+  10 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> htdig-3.1.6-r7.ebuild:
+  stable on amd64. see #80602
 
 *htdig-3.1.6-r7 (10 Feb 2005)
 
